- Added id attributes to the works, about-myself and contact sections to enable the navigation menu to use them as shortcuts. - Updated the style.css file to apply styling to the contact button.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </section>
 
   <section class="works">
-    <div class="container">
+    <div class="container" id="portfolio">
       <div class="card none">
         <img src="./img/snapshoot_portfolio.png" alt="Tonic Snapshot">
         <div class="card-content">
@@ -218,7 +218,7 @@
     </div>
   </section>
 
-  <section class="about-myself">
+  <section class="about-myself" id="about">
     <div class="container">
       <div class="about-container">
         <h2 class="about-title">About Myself</h2>
@@ -266,7 +266,7 @@
       </div>
     </div>
   </section>
-  <section class="contact">
+  <section class="contact" id="contact">
     <div class="background-container">
       <div class="container">
         <h2>Contact me</h2>
