I've made several updates to the project: - Replaced the "logo" text in the nav with an image for a more visually appealing design. - Updated the description of the live demo in the readme to provide clearer information to the user. - Added a hover effect to the logo in the CSS to enhance the user experience. - Uploaded the logo image to the project.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header class="main-navigation">
     <div class="logo-placeholder">
-      <a href="#">My Logo</a>
+      <a href="https://www.linkedin.com/in/pablo-bonasera-142327257/" target="_blank"><img src="./img/name logo.png" alt="Pablo Bonasera"></a>
     </div>
     <nav class="nav">
       <div class="burguer-menu">
