--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header class="main-navigation">
     <div class="logo-placeholder">
-      <a href="https://www.linkedin.com/in/pablo-bonasera-142327257/"><img src="./img/name logo.png" alt="Pablo Bonasera"></a>
+      <a href="https://www.linkedin.com/in/pablo-bonasera-142327257/" target="_blank" rel="noopener"><img src="./img/namelogo.png" alt="Pablo Bonasera"></a>
     </div>
     <nav class="nav">
       <div class="burguer-menu">
