--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             needs coding.
             <span>I’d love to help with it!</span>
           </p>
-          <form action="https://formspree.io/f/xzbqoegq" method="POST">
+          <form id="contact-form" action="https://formspree.io/f/xzbqoegq" method="POST">
             <div class="form-group">
               <input
                 type="text"
@@ -153,7 +153,7 @@
                 name="email"
                 placeholder="Enter your Email Here"
                 required
-                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+                pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$"
               />
             </div>
             <div class="form-group">
@@ -167,6 +167,7 @@
                 required
               ></textarea>
             </div>
+            <div class="validationErrors"></div>
             <div class="form-actions">
               <button class="form-button" type="submit">Get in touch</button>
             </div>
