--- a/index.html
+++ b/index.html
@@ -14,20 +14,24 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header class="main-nav">
-      <div id="top-nav">
-        <i class="bx bxl-facebook-square"></i>
-        <i class="bx bxl-twitter"></i>
-        <a href="#">English</a>
-        <a href="#">My Page</a>
-        <a href="#">Logout</a>
+      <div class="top-nav">
+        <ul class="list-inline">
+          <li>
+            <a href="#"><i class="bx bxl-facebook-square"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="bx bxl-twitter"></i></a>
+          </li>
+          <li><a href="#">English</a></li>
+          <li><a href="#">My Page</a></li>
+          <li><a href="#">Logout</a></li>
+        </ul>
       </div>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary font-family: 'Lato', sans-serif;
-      font-family: 'Poppins', sans-serif;
-      ">
+      <nav class="navbar navbar-expand-md">
         <div class="container-fluid">
           <button
             class="navbar-toggler"
@@ -53,147 +57,202 @@
                 <a class="nav-link disabled">Disabled</a>
               </li>
             </ul>
-            </form>
           </div>
         </div>
       </nav>
     </header>
-    <section class="main-titles">
+    <section class="hero">
       <div class="container-md red-bg">
         <h2>"Hello, Food Lovers"</h2>
       </div>
-      <div class="titles-container container-md">
+      <div class="titles-container">
         <h1>
-          <span class="red-bg">HEALTHY FOOD</span> <br>
-          <span class="red-bg">GLOBAL CONFERENCE</span> <br>
+          <span class="red-bg">HEALTHY FOOD</span> <br />
+          <span class="red-bg">GLOBAL CONFERENCE</span> <br />
           <span class="red-bg">2023</span>
         </h1>
       </div>
-      <div class=" container-md  ">
-         
-        <div class="titles-container container-md ">
-        <h6>  We embrace the essence of healthy cooking as an invitation to prioritize self-care and embrace a wholesome lifestyle, all while nurturing and preserving our precious planet. </h6>
+      <div class="container-md">
+        <div class="titles-container container-md">
+          <h6>
+            We embrace the essence of healthy cooking as an invitation to
+            prioritize self-care and embrace a wholesome lifestyle, all while
+            nurturing and preserving our precious planet.
+          </h6>
         </div>
-         
       </div>
       <div class="titles-container container-md">
         <h3><span class="date">2023.05.15(MON) - 16(FRI)</span></h3>
-        <h6><span class="city">@National University of Cooking, Mendoza</span></h6>
+        <h6>
+          <span class="city">@National University of Cooking, Mendoza</span>
+        </h6>
       </div>
     </section>
     <section class="main-schedule p-4">
       <p class="text-center fs-2 main-program">Main Program</p>
       <div class="container">
-        <div class="row gap-4 ">
+        <div class="row gap-4">
           <div class="col-md-2 col-12 flex-column w-border">
-            <div class="cardRow  align-items-center gap-4">
-            <img src="./card iconos/Lecture.svg" alt="">
-            <h3>Healthy Nutrition</h3>
-            <p class="m-0">The conference will cover a variety of relevant topics related to healthy food and the importance of a balanced diet</p> 
+            <div class="cardRow align-items-center gap-4">
+              <img src="./card iconos/Lecture.svg" alt="" />
+              <h3>Healthy Nutrition</h3>
+              <p class="m-0">
+                The conference will cover a variety of relevant topics related
+                to healthy food and the importance of a balanced diet
+              </p>
             </div>
           </div>
           <div class="col-md-2 col-12 flex-column w-border">
-            <div class="cardRow   align-items-center gap-4">
-            <img src="./card iconos/Exhibition.svg" alt="">
-            <h3>Panel discussions</h3>
-            <p class="m-0">Experts will share different perspectives on specific topics related to healthy food</p> 
-          </div>
-          </div>
-          <div class="col-md-2 col-12 flex-column w-border">
-            <div class="cardRow   align-items-center gap-4">
-            <img src="./card iconos/Forum.svg" alt="">
-            <h3>Practical workshops</h3>
-            <p class="m-0">Hands-on workshops will be conducted where attendees can learn to prepare healthy recipes</p> 
-          </div>
-          </div>
-          <div class="col-md-2 col-12 flex-column w-border">
-            <div class="cardRow  align-items-center gap-4">
-            <img src="./card iconos/Workshop.svg" alt="" class="">
-            <h3>Inspiration</h3>
-            <p class="m-0">The conference aims to inspire and motivate attendees to adopt healthy eating habits, providing success stories</p>
-          </div> 
+            <div class="cardRow align-items-center gap-4">
+              <img src="./card iconos/Exhibition.svg" alt="" />
+              <h3>Panel discussions</h3>
+              <p class="m-0">
+                Experts will share different perspectives on specific topics
+                related to healthy food
+              </p>
+            </div>
           </div>
           <div class="col-md-2 col-12 flex-column w-border">
             <div class="cardRow align-items-center gap-4">
-            <img src="./card iconos/Ignite.svg" alt="">
-            <h3>Relevant topics</h3>
-            <p class="m-0">The conference will feature nutrition experts who will share their knowledge with you</p> 
+              <img src="./card iconos/Forum.svg" alt="" />
+              <h3>Practical workshops</h3>
+              <p class="m-0">
+                Hands-on workshops will be conducted where attendees can learn
+                to prepare healthy recipes
+              </p>
+            </div>
           </div>
+          <div class="col-md-2 col-12 flex-column w-border">
+            <div class="cardRow align-items-center gap-4">
+              <img src="./card iconos/Workshop.svg" alt="" class="" />
+              <h3>Inspiration</h3>
+              <p class="m-0">
+                The conference aims to inspire and motivate attendees to adopt
+                healthy eating habits, providing success stories
+              </p>
+            </div>
+          </div>
+          <div class="col-md-2 col-12 flex-column w-border">
+            <div class="cardRow align-items-center gap-4">
+              <img src="./card iconos/Ignite.svg" alt="" />
+              <h3>Relevant topics</h3>
+              <p class="m-0">
+                The conference will feature nutrition experts who will share
+                their knowledge with you
+              </p>
+            </div>
           </div>
         </div>
-        <p class="text-center join-btn mt-5"><button>Join WFC Conference 2023</button></p>
-      </div>  
+        <p class="text-center join-btn mt-5">
+          <button>Join WFC Conference 2023</button>
+        </p>
+      </div>
     </section>
     <section class="main-invited">
       <p class="text-center fs-2 main-program p-4">Featured Speakers</p>
       <div class="container">
         <div class="row">
           <div class="content-invited" id="elena">
-            <img src="./img/invited1.jpg" alt="elena">
+            <img src="./img/invited1.jpg" alt="elena" />
             <div class="invited-content">
-            <h4>Elena Smith</h4>
-            <h5>Director of Art Cooking Center and a Member of MasterChef Cuba</h5>
-            <p>As the new winner of the Fried Chicken, Elena promotes now a healthy cook</p>
+              <h4>Elena Smith</h4>
+              <h5>
+                Director of Art Cooking Center and a Member of MasterChef Cuba
+              </h5>
+              <p>
+                As the new winner of the Fried Chicken, Elena promotes now a
+                healthy cook
+              </p>
             </div>
           </div>
           <div class="content-invited" id="isabella">
-            <img src="./img/invited2.jpg" alt="isabella">   
+            <img src="./img/invited2.jpg" alt="isabella" />
             <div class="invited-content">
-            <h4>Isabella Johnson</h4>
-            <h5>Director of Art Cooking Center and a Member of MasterChef Cuba</h5>
-            <p>As the new winner of the Fried Chicken, Isabella promotes now a healthy cook</p>
+              <h4>Isabella Johnson</h4>
+              <h5>
+                Director of Art Cooking Center and a Member of MasterChef Cuba
+              </h5>
+              <p>
+                As the new winner of the Fried Chicken, Isabella promotes now a
+                healthy cook
+              </p>
             </div>
           </div>
           <div class="content-invited" id="sophia">
-            <img src="./img/invited3.jpg" alt="sophia">   
+            <img src="./img/invited3.jpg" alt="sophia" />
             <div class="invited-content">
-            <h4>Sophia Williams</h4>
-            <h5>Director of Art Cooking Center and a Member of MasterChef Cuba</h5>
-            <p>As the new winner of the Fried Chicken, Sophia promotes now a healthy cook</p>
+              <h4>Sophia Williams</h4>
+              <h5>
+                Director of Art Cooking Center and a Member of MasterChef Cuba
+              </h5>
+              <p>
+                As the new winner of the Fried Chicken, Sophia promotes now a
+                healthy cook
+              </p>
             </div>
           </div>
           <div class="content-invited" id="olivia">
-            <img src="./img/invited4.jpg" alt="olivia">   
+            <img src="./img/invited4.jpg" alt="olivia" />
             <div class="invited-content">
-            <h4>Olivia Brown</h4>
-            <h5>Director of Art Cooking Center and a Member of MasterChef Cuba</h5>
-            <p>As the new winner of the Fried Chicken, Olivia promotes now a healthy cook</p>
+              <h4>Olivia Brown</h4>
+              <h5>
+                Director of Art Cooking Center and a Member of MasterChef Cuba
+              </h5>
+              <p>
+                As the new winner of the Fried Chicken, Olivia promotes now a
+                healthy cook
+              </p>
             </div>
           </div>
           <div class="content-invited" id="mia">
-            <img src="./img/invited5.jpg" alt="mia">   
+            <img src="./img/invited5.jpg" alt="mia" />
             <div class="invited-content">
-            <h4>Mia Miller</h4>
-            <h5>Director of Art Cooking Center and a Member of MasterChef Cuba</h5>
-            <p>As the new winner of the Fried Chicken, Mia promotes now a healthy cook</p>
+              <h4>Mia Miller</h4>
+              <h5>
+                Director of Art Cooking Center and a Member of MasterChef Cuba
+              </h5>
+              <p>
+                As the new winner of the Fried Chicken, Mia promotes now a
+                healthy cook
+              </p>
             </div>
           </div>
           <div class="content-invited" id="ava">
-            <img src="./img/invited6.jpg" alt="ava">   
+            <img src="./img/invited6.jpg" alt="ava" />
             <div class="invited-content">
-            <h4>Ava Davis</h4>
-            <h5>Director of Art Cooking Center and a Member of MasterChef Cuba</h5>
-            <p>As the new winner of the Fried Chicken, Ava promotes now a healthy cook</p>
+              <h4>Ava Davis</h4>
+              <h5>
+                Director of Art Cooking Center and a Member of MasterChef Cuba
+              </h5>
+              <p>
+                As the new winner of the Fried Chicken, Ava promotes now a
+                healthy cook
+              </p>
             </div>
           </div>
         </div>
       </div>
+      <button
+        class="container-md align-items-center more-invited-btn border-1 rounded"
+      >
+        MORE<i class="bx bx-chevron-down"></i>
+      </button>
     </section>
     <section class="main-partners">
       <p class="text-center">Partners</p>
       <div class="container">
         <div class="row">
           <div class="col d-flex justify-content-center gap-4">
-            <img src="./iconos/mozilla.svg" alt="mozilla">
-            <img src="./iconos/google.svg" alt="google">
-            <img src="./iconos/naver.svg" alt="naver">
-            <img src="./iconos/daum.svg" alt="daum">
-            <img src="./iconos/airbnb.svg" alt="airbnb">
+            <img src="./iconos/mozilla.svg" alt="mozilla" />
+            <img src="./iconos/google.svg" alt="google" />
+            <img src="./iconos/naver.svg" alt="naver" />
+            <img src="./iconos/daum.svg" alt="daum" />
+            <img src="./iconos/airbnb.svg" alt="airbnb" />
           </div>
         </div>
       </div>
     </section>
-    <footer>
+    <footer class="main-footer">
       <div class="container">
         <div class="row">
           <div class="col d-flex justify-content-center gap-4">
@@ -202,7 +261,7 @@
           </div>
         </div>
       </div>
-    </footer class="main-footer">
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
