--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../css/style.css">
   </head>
   <body>
     <header class="main-nav">
@@ -56,72 +56,71 @@
         </div>
       </nav>
     </header>
-    <section class="hero about pt-3">
-      <div class="container-md text-red text-center">
-        <h2>"Hello! Food lovers"</h2>
-      </div>
-      <div class="titles-container container-md">
-        <h1 class="text-center">
-          <span class="text-red">HEALTHY FOOD</span>
-          <span class="text-red">GLOBAL CONFERENCE</span>
-          <span class="text-red">2023</span>
-        </h1>
-      </div>
-      <div class="container-md">
-        <div class="titles-container about container-md border-1 rounded text-center">
-        <h6>  The Healthy Food Global Conference 2023 brings together a community of experts, chefs, and distinguished personalities from the culinary world. This prestigious event offers a unique opportunity to delve into the realm of healthy and eco-friendly cuisine, providing participants with a comprehensive platform to learn the finest techniques. </h6>
-        </div>
-      </div>
-      <div class="titles-container container-md lh-1 py-2">
-        <p class="text-center">Please Contact us per email for any further questions</p>
-        <p class="text-center">about WF Conference 2023</p>
-        <p class="text-center fw-bold text-decoration-underline">wfc2023@university.com</p>
-      </div>
-    </section>
-    <section class="container-md main-schedule-about p-4">
-      <h3 class="text-center fs-3 main-program-about fw-bolder">World Food Conference Group</h3>
-      <h3 class="text-center fs-2 main-program-about fw-bold">WFC 2023 Logo</h3>
-      <p class="text-center container-md px-5 p-3">The logo of FWC was decided trought the "LOGO Competition from 8, june to 7, july"</p>
-      <div class="about-container-img">
-        <img class="logo" src="./img/world-food-logo.png" alt="WFC logo">
-      </div>
-      <hr class="grey-bar">
-      <p class="text-center fs-3 fw-bold main-program p-4">See the past WF Global Conference </p>
-      <p class="text-center container-md px-5 p-3">Take a look the last two WFC which took place in Venezuela and Brasil"</p>
-      <div class="container-md last-meet">
-        <div class="image-container">
-          <img src="./img/venezuela-2022.jpg" alt="Venezuela 2022">
-          <div class="text-overlay">
-            <h3><span>2022</span> WFC in Venezuela</h3>
-          </div>
-        </div>
-        <div class="image-container">
-          <img src="./img/brasil-2021.jpg" alt="Brasil 2021">
-          <div class="text-overlay">
-            <h3><span>2021</span> WFC in Goias</h3>
+    <section class="hero p-3">
+      <div class="container">
+        <div class="row">
+          <div class="col  text-center">
+            <span class="h3 text-red">"Hello, Sharing world"</span>
+            <h1 class="text-red mb-4">Healthy food global summit 2023</h1>
+            <p class="event-description about">
+              The Healthy Food Global Conference 2023 brings together a community of experts, chefs, and distinguished personalities from the culinary world.
+            </p>
+
+            <div class="event-info about mt-4">
+              <p class="text-center">Please Contact us per email for any further questions</p>
+              <p class="text-center">About WF Conference 2023!</p>
+              <p class="text-center fw-bold text-decoration-underline">wfc2023@university.com</p>
+            </div>
           </div>
         </div>
       </div>
     </section>
- 
-    <section class="main-partners show">
-      <p class="text-center fs-3">Partner</p>
-      <div class="container-md">
-        <div class="row flex-wrap justify-content-center">
-          <div class="d-flex gap-3">
+    <section class="about-logo container ">
+      <div class="row main-schedule-about">
+        <div class="col">
+          <h2 class="text-center fs-5 fw-bold pt-4">World Food Conference Group</h2>
+          <h2 class="text-center fs-5 fw-bold">WFC 2023 Logo</h2>
+          <p class="text-center sm-fz">The logo of FWC was decided trought the "LOGO Competition from 8, june to 7, july"</p>
+          <div class="container about-container-img">
+            <img class="logo" src="./img/world-food-logo.png" alt="WFC logo">
+          </div>
+          <hr class="grey-bar">
+          <p class="text-center fs-5 fw-bold main-program">See the past WF Global Conference </p>
+          <p class="text-center sm-fz">Take a look the last two WFC which took place in Venezuela and Brasil"</p>
+          <div class="container-md last-meet">
+            <div class="image-container">
+              <img src="./img/venezuela-2022.jpg" alt="Venezuela 2022">
+              <div class="text-overlay">
+                <h3><span>2022</span> WFC in Venezuela</h3>
+              </div>
+            </div>
+            <div class="image-container">
+              <img src="./img/brasil-2021.jpg" alt="Brasil 2021">
+              <div class="text-overlay">
+                <h3><span>2021</span> WFC in Goias</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>   
+    </section>
+
+    <section class="container main-partners show">
+      <h2 class="text-center fs-3">Partners</h2>
+      <div class="row">
+        <div class="col d-flex justify-content-center gap-2">
             <img src="./iconos/mozilla.svg" alt="mozilla">
             <img src="./iconos/google.svg" alt="google">
             <img src="./iconos/naver.svg" alt="naver">
             <img src="./iconos/daum.svg" alt="daum">
             <img src="./iconos/airbnb.svg" alt="airbnb">
-          </div>
         </div>
       </div>
     </section>
     <footer class="main-footer show">
       <div class="container">
         <div class="row">
-          <div class="col d-flex justify-content-center gap-4 p-4">
+          <div class="col d-flex justify-content-center gap-4 p-4 sm-fz">
             <a class="navbar-brand" href="#">Hidden brand</a>
             <p>2023 World Food Conference</p>
           </div>
