Add media queries for 768+ and 992+ Add more text to logo description Remove class show Remove old style.css from root Add a span un title

--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
               The Healthy Food Global Conference 2023 brings together a community of experts, chefs, and distinguished personalities from the culinary world.
             </p>
 
-            <div class="event-info about mt-4">
+            <div class="event-info about mt-4 ">
               <p class="text-center">Please Contact us per email for any further questions</p>
               <p class="text-center">About WF Conference 2023!</p>
               <p class="text-center fw-bold text-decoration-underline">wfc2023@university.com</p>
@@ -78,14 +78,14 @@
     <section class="about-logo container ">
       <div class="row main-schedule-about">
         <div class="col">
-          <h2 class="text-center fs-5 fw-bold pt-4">World Food Conference Group</h2>
-          <h2 class="text-center fs-5 fw-bold">WFC 2023 Logo</h2>
-          <p class="text-center sm-fz">The logo of FWC was decided trought the "LOGO Competition from 8, june to 7, july"</p>
+          <h2 class="text-center logo-font fw-bold pt-4">World Food Conference Group</h2>
+          <h2 class="text-center logo-font fs-3 fw-bold">WFC 2023 Logo</h2>
+          <p class="text-center sm-fz">The logo of FWC was decided trought the "LOGO Competition from 8, june to 7, july" After online public voting and selectiong commite judging process.</p>
           <div class="container about-container-img">
             <img class="logo" src="./img/world-food-logo.png" alt="WFC logo">
           </div>
           <hr class="grey-bar">
-          <p class="text-center fs-5 fw-bold main-program">See the past WF Global Conference </p>
+          <p class="text-center   fw-bold main-program logo-font">See the past WF Global Conference </p>
           <p class="text-center sm-fz">Take a look the last two WFC which took place in Venezuela and Brasil"</p>
           <div class="container-md last-meet">
             <div class="image-container">
@@ -117,10 +117,10 @@
         </div>
       </div>
     </section>
-    <footer class="main-footer show">
+    <footer class="main-footer">
       <div class="container">
         <div class="row">
-          <div class="col d-flex justify-content-center gap-4 p-4 sm-fz">
+          <div class="col d-flex justify-content-center gap-4">
             <a class="navbar-brand" href="#">Hidden brand</a>
             <p>2023 World Food Conference</p>
           </div>
