--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
         <div class="row">
           <div class="col-md-9">
             <span class="h3 red-bg">"Hello, Food Lovers"</span>
-            <h1 class="red-bg mb-4">Healthy food global summit 2023</h1>
+            <h1 class="red-bg mb-4">
+              Healthy food global summit <span>2023</span>
+            </h1>
             <p class="event-description">
               We embrace the essence of healthy cooking as an invitation to
               prioritize self-care and embrace a wholesome lifestyle, all while
@@ -156,7 +158,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-12 col-md-6">
+          <div class="col-12 col-md-6 speaker-contain">
             <div class="content-invited" id="elena">
               <div class="speaker-pic">
                 <img src="./img/invited1.jpg" alt="elena" />
@@ -190,7 +192,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-6">
+          <div class="col-12 col-md-6 speaker-contain">
             <div class="content-invited" id="elena">
               <div class="speaker-pic">
                 <img src="./img/invited3.jpg" alt="elena" />
